CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

PROJECT(
  bali
  VERSION 1.0.0
  DESCRIPTION "Barely a Lisp interpreter"
  LANGUAGES C CXX
  HOMEPAGE_URL "https://github.com/RauliL/bali"
)

FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)

ADD_EXECUTABLE(
  ${PROJECT_NAME}
  ${SOURCE_FILES}
)

TARGET_INCLUDE_DIRECTORIES(
  ${PROJECT_NAME}
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    ${CMAKE_CURRENT_SOURCE_DIR}/ext/peelo-prompt/include
    ${CMAKE_CURRENT_SOURCE_DIR}/ext/peelo-unicode/include
)

TARGET_COMPILE_FEATURES(
  ${PROJECT_NAME}
  INTERFACE
    cxx_std_17
)

IF(MSVC)
  TARGET_COMPILE_OPTIONS(
    ${PROJECT_NAME}
    PRIVATE
      /W4 /WX
  )
ELSE()
  TARGET_COMPILE_OPTIONS(
    ${PROJECT_NAME}
    PRIVATE
      -Wall -Werror
  )
ENDIF()

INSTALL(
  TARGETS
    ${PROJECT_NAME}
  RUNTIME DESTINATION
    bin
)
